--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,8 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+monitor_speed = 115200
 lib_deps = 
 	sparkfun/SparkFun Qwiic 6Dof - LSM6DSO@^1.0.3
+	worldfamouselectronics/PulseSensor Playground@^1.6.1
+	amcewen/HttpClient@^2.2.0
